# voxide

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: CAPTURE_TRANSCRIPTION_IMPROVEMENTS.md  PERFORMANCE-PLAN.md  PRODUCTION-READINESS-PLAN.md
scripts/: setup-nemotron-cuda-runtime.sh  setup-parakeet-cuda-runtime.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/: README.md  spoken-a-espeak-ng-8khz.wav.b64
src-tauri/icons/: icon.icns
src-tauri/scripts/: nemotron_cuda_server.py  parakeet_pronunciation_spike.py  pronunciation_server.py
src-tauri/src/: analytics.rs  apple_speech.rs  asr.rs  asr_adapter.rs  audio.rs  debug_log.rs  formatting.rs  lib.rs  local_api.rs  main.rs  media.rs  nemotron.rs  parakeet.rs  parakeet_stream.rs  permissions.rs  portal_hotkeys.rs  pronunciation.rs  provider.rs  session.rs  speech.rs  trigger.rs  typing.rs  update.rs
