[package]
name = "voxide"
version = "0.1.0"
description = "Voxide — cross-platform desktop dictation"
authors = ["Voxide contributors"]
edition = "2021"
license = "MIT"
rust-version = "1.77.2"

[lib]
name = "voxide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voxide"
path = "src/main.rs"

[features]
default = []
# GPU transcription backends for whisper.cpp. Vulkan works on any GPU vendor
# and needs vulkan-headers, vulkan-loader-devel, and glslc at build time;
# CUDA needs the NVIDIA CUDA toolkit.
vulkan = ["whisper-rs/vulkan"]
cuda = ["whisper-rs/cuda"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
active-win-pos-rs = "0.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
axum = "0.8.9"
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control", "image-data"] }
base64 = "0.22.1"
cpal = "0.17.1"
directories = "6.0.0"
enigo = { version = "0.3.0", default-features = false, features = ["wayland", "x11rb"] }
futures-util = "0.3.31"
hound = "3.5.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
regex = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
symphonia = { version = "0.5.4", default-features = false, features = ["all"] }
tauri = { version = "2.11.1", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-notification = "2.3.2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2.4.1"
thiserror = "2.0.17"
tokio = { version = "1.53.0", features = ["fs", "io-util", "net", "process", "sync", "time"] }
uuid = { version = "1.22.0", features = ["v4"] }
whisper-rs = "0.16.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.10.2", default-features = false, features = ["tokio"] }
notify-rust = "4.11.7"
keyring = { version = "3.6.3", features = ["linux-native-sync-persistent", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }
block2 = { version = "0.6.2", features = ["alloc"] }
objc2 = { version = "0.6.4", features = ["std"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSError", "NSLocale", "NSString", "NSURL"] }
objc2-speech = { version = "0.3.2", default-features = false, features = ["std", "block2", "SFSpeechRecognitionRequest", "SFSpeechRecognitionResult", "SFSpeechRecognitionTask", "SFSpeechRecognizer", "SFTranscription"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }
