[package]
name = "voxide"
version = "0.1.0"
description = "Voxide — cross-platform desktop dictation"
authors = ["Voxide contributors"]
edition = "2021"
license = "MIT"
rust-version = "1.89"

[lib]
name = "voxide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voxide"
path = "src/main.rs"

[features]
default = []
# Enables Tauri's production asset protocol. `tauri build` turns this on
# automatically, but keeping it explicit makes a direct Cargo release build
# opt-in and prevents a runnable binary from silently using `devUrl`.
custom-protocol = ["tauri/custom-protocol"]
# GPU transcription backends for whisper.cpp. Vulkan works on any GPU vendor
# and needs vulkan-headers, vulkan-loader-devel, and glslc at build time;
# CUDA needs the NVIDIA CUDA toolkit.
#
# The vulkan feature targets whisper-rs-sys directly: it compiles GGML's
# Vulkan backend (which whisper.cpp selects automatically at runtime) while
# skipping whisper-rs 0.16's `vulkan` helper module, which does not compile
# against the whisper.cpp version its own sys crate bundles.
vulkan = ["whisper-rs-sys/vulkan"]
# Parakeet uses sherpa-onnx's CUDA execution provider.  Keeping it behind the
# CUDA build means portable builds do not acquire a second, platform-specific
# native runtime.
parakeet = ["dep:sherpa-onnx"]
cuda = ["whisper-rs/cuda", "parakeet"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
active-win-pos-rs = "0.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
axum = "0.8.9"
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control", "image-data"] }
base64 = "0.22.1"
bzip2 = "0.5.2"
cpal = "0.17.1"
directories = "6.0.0"
enigo = { version = "0.3.0", default-features = false, features = ["wayland", "x11rb"] }
futures-util = "0.3.31"
hound = "3.5.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
regex = "1.13.1"
rtrb = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sherpa-onnx = { version = "1.13.4", default-features = false, features = ["shared"], optional = true }
symphonia = { version = "0.5.4", default-features = false, features = ["all"] }
tauri = { version = "2.11.1", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-notification = "2.3.2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2.4.1"
thiserror = "2.0.17"
tar = "0.4.44"
tokio = { version = "1.53.0", features = ["fs", "io-util", "net", "process", "sync", "time"] }
uuid = { version = "1.22.0", features = ["v4"] }
whisper-rs = "0.16.0"
whisper-rs-sys = "0.15.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.10.2", default-features = false, features = ["tokio"] }
notify-rust = "4.11.7"
keyring = { version = "3.6.3", features = ["linux-native-sync-persistent", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }
block2 = { version = "0.6.2", features = ["alloc"] }
objc2 = { version = "0.6.4", features = ["std"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSError", "NSLocale", "NSString", "NSURL"] }
objc2-speech = { version = "0.3.2", default-features = false, features = ["std", "block2", "SFSpeechRecognitionRequest", "SFSpeechRecognitionResult", "SFSpeechRecognitionTask", "SFSpeechRecognizer", "SFTranscription"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }
